<resources>
    <string name="app_name">Growing</string>
    <string name="growing_together">함께 성장하기</string>
    <string name="motivation">동기부여</string>
    <string name="miracle_morning">미라클 모닝</string>
    <string name="settings">설정</string>>
    <string name="stamp">스탬프</string>
    <string name="stamp_title">일어난 시간을 기록해주세요</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="month_format">yyyy년 M월</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>

    <string name="start_date">시작 날짜</string>
    <string name="goal_minute">목표 시간</string>
    <string name="goal_time_format">%1$s %2$d시 %3$d분</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="date_format">yyyy년 M월 d일</string>

    <string name="all">전체</string>
    <string name="study">공부</string>
    <string name="entrepreneur">기업가</string>
    <string name="challenge">도전</string>
    <string name="famous_line">명대사</string>
    <string name="believe_in">믿음</string>
    <string name="change">변화</string>
    <string name="the_rich">부자</string>
    <string name="success">성공</string>
    <string name="bitter_words">쓴소리</string>
    <string name="passion">열정</string>
    <string name="athlete">운동선수</string>
    <string name="consolation">위로</string>
    <string name="confidence">자신감</string>
    <string name="self_esteem">자존감</string>
    <string name="give_up">포기</string>

    <string name="todo">할 일</string>
    <string name="done">끝마침!</string>
    <string name="todo_what">오늘은 어떤 일을 하실 건가요?</string>
    <string name="add_todo">할 일 추가하기</string>
    <string name="removed">할 일이 삭제됐어요.</string>

    <string name="preference_key">com.eryuksa.growing.SHARED_PREFERENCE</string>
</resources>