<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listViewModel"
            type="com.eryuksa.growing.motivation.YoutubeListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/motivation"
            app:titleTextAppearance="@style/motivationTitleStyle" />

        <HorizontalScrollView
            android:id="@+id/horizontal_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:onCheckedChangeListener="@{(_, checkedId) -> listViewModel.onChipCheckedChanged(checkedId)}"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_all"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/all" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_study"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/study" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_change"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_bitter"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bitter_words" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_success"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/success" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_entrepreneur"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entrepreneur" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_athlete"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/athlete" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_self_esteem"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/self_esteem" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_consolation"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consolation" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_famous_line"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/famous_line" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_passion"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passion" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_believe"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/believe_in" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_challenge"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/challenge" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_rich"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_rich" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_confidence"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confidence" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_give_up"
                    style="@style/youtubeListChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/give_up" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_view"
            android:scrollbars="vertical"
            android:scrollbarFadeDuration="0"
            tools:listitem="@layout/item_youtube" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>