<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_round_dialog"
    android:padding="8dp">

    <View
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        android:background="@color/dialog_title"
        app:layout_constraintBottom_toBottomOf="@id/text_current_date"
        app:layout_constraintEnd_toStartOf="@id/text_current_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_current_date" />

    <TextView
        android:id="@+id/text_current_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/dialog_title"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7"
        tools:text="2022년 2월 11일" />

    <View
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        android:background="@color/dialog_title"
        app:layout_constraintBottom_toBottomOf="@id/text_current_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_current_date"
        app:layout_constraintTop_toTopOf="@id/text_current_date" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/stamp_title"
        android:textColor="@color/dialog_title"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_current_date"
        app:layout_constraintWidth_percent="0.7" />

    <TimePicker
        android:theme="@style/TimePickerStyle"
        android:id="@+id/time_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/dialogButtonCancel"
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_ok"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/dialogButtonOk"
        android:id="@+id/button_ok"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_cancel"
        app:layout_constraintTop_toBottomOf="@id/time_picker" />
</androidx.constraintlayout.widget.ConstraintLayout>